--- a/ppjoke_jetpack/settings.gradle
+++ b/ppjoke_jetpack/settings.gradle
@@ -1,2 +1,6 @@
 rootProject.name='ppjoke_jetpack'
 include ':app'
+include ':libnavannotation'
+include ':libnavcompiler'
+include ':libnetwork'
+include ':libcommon'
